# bitmex-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/rest/: api_request.rs  mod.rs
src/utils/: auth.rs  enums.rs  mod.rs  thread_pool.rs
src/utils/data/: execution.rs  instrument.rs  mod.rs  order.rs  order_book_l2.rs  position.rs  trade_bucketed.rs  user_margin.rs
src/websocket/: mod.rs
