[package]
name = "bitmex"
version = "0.1.0"
authors = ["dfmb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-http = "2.2.0"
http = "0.2.1"
awc = { version="2.0.3", features=["rustls"] }
serde_json = "1.0.60"
serde = { version = "1.0.123", features = ["derive"] }
tungstenite = "0.11.1"
url = "2.2.0"
openssl = { version = "0.10.30", features = ["vendored"] }
sha2 = "0.9.2"
hmac = "0.10.1"
hex = "0.4.2"
log = "0.4.11"
env_logger = "0.8.2"
rayon = "1.5.0"
chrono = "0.4.19"